리스트 정리

--- a/pub_list.html
+++ b/pub_list.html
@@ -29,6 +29,7 @@
     .lastmdate {color: #1155CC;}
     .stand_by {color:#777;}
     .ing {color:#4848D4;}
+    .red {background-color: rgb(173, 13, 13); color: #fff; padding: 2px 5px;}
     .end {color:green;}
     .list_w table td.link,
     .list_w table td.etc{text-align: left; padding-left:10px;}
@@ -275,7 +276,7 @@
                     date:'',
                     mdate:'2022-10-04',
                     con:'작업중',
-                    etc:''
+                    etc:'<span class="red">기획서 없음</span>'
                 },
                 {
                     division: '',
@@ -329,7 +330,7 @@
                     date:'',
                     mdate:'2022-10-05',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -338,7 +339,7 @@
                     date:'',
                     mdate:'2022-10-06',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -347,7 +348,7 @@
                     date:'',
                     mdate:'2022-10-07',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
 
                 // 투자가이드
@@ -358,7 +359,7 @@
                     date:'',
                     mdate:'2022-09-05',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -403,7 +404,7 @@
                     date:'',
                     mdate:'2022-10-06',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -441,7 +442,7 @@
                     date:'',
                     mdate:'2022-10-14',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -458,15 +459,6 @@
                     path:'./portal/html/USR-1220-F-DASH.html',
                     date:'',
                     mdate:'2022-10-11',
-                    con:'작업중',
-                    etc:'[2차디자인]'
-                },
-                {
-                    division: '',
-                    depth1:'통계 - 투자실적(TAB-4)',
-                    path:'./portal/html/USR-1220-F-DASH-2.html',
-                    date:'',
-                    mdate:'2022-10-21',
                     con:'작업중',
                     etc:'[2차디자인]'
                 },
@@ -531,7 +523,7 @@
                     date:'',
                     mdate:'2022-10-20',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">기획서 없음</span> [2차디자인]'
                 },
                 {
                     division: '',
@@ -632,7 +624,7 @@
                     date:'',
                     mdate:'2022-11-08',
                     con:'작업중',
-                    etc:'[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -704,7 +696,7 @@
                     date:'',
                     mdate:'',
                     con:'작업중',
-                    etc:'기획서 없음[게시판 타입1 - 상세]'
+                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
@@ -713,7 +705,7 @@
                     date:'',
                     mdate:'',
                     con:'작업중',
-                    etc:'기획서 없음[게시판 타입1 - 등록/수정]'
+                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
@@ -722,7 +714,7 @@
                     date:'',
                     mdate:'',
                     con:'작업중',
-                    etc:'기획서 없음[게시판 타입1 - 상세]'
+                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
@@ -731,7 +723,7 @@
                     date:'',
                     mdate:'',
                     con:'작업중',
-                    etc:'기획서 없음[게시판 타입1 - 등록/수정]'
+                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
@@ -740,7 +732,7 @@
                     date:'',
                     mdate:'',
                     con:'작업중',
-                    etc:'기획서 없음[게시판 타입1 - 상세]'
+                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
@@ -749,7 +741,7 @@
                     date:'',
                     mdate:'',
                     con:'작업중',
-                    etc:'기획서 없음[게시판 타입1 - 등록/수정]'
+                    etc:'<span class="red">기획서 없음</span>[게시판 타입1 - 등록/수정]'
                 },
                 {
                     division: '',
@@ -886,7 +878,7 @@
                     date:'',
                     mdate:'2022-11-01',
                     con:'작업중',
-                    etc:'[1차디자인]'
+                    etc:'<span class="red">확인필요</span>[1차디자인]'
                 },
                 {
                     division: '',
@@ -1053,17 +1045,6 @@
                     mdate:'2022-11-15',
                     con:'작업중',
                     etc:'[1차디자인]'
-                },
-
-                // 퀵메뉴
-                {
-                    division: '퀵메뉴',
-                    depth1:'즐겨찾기 메뉴',
-                    path:'./portal/html/USR-3010-F-DASH.html',
-                    date:'',
-                    mdate:'',
-                    con:'작업중',
-                    etc:'[스타일가이드] '
                 },
 
                 // footer
