--- a/pub_list.html
+++ b/pub_list.html
@@ -529,9 +529,9 @@
                     division: '',
                     depth1:'구인구직 - 채용공고',
                     path:'./portal/html/USR-1241-F-LIST.html',
-                    date:'',
+                    date:'2022-09-13',
                     mdate:'2022-10-24',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
@@ -541,15 +541,15 @@
                     date:'',
                     mdate:'2022-10-24',
                     con:'작업중',
-                    etc:''
+                    etc:'<span class="red">기획서 없음</span>'
                 },
                 {
                     division: '',
                     depth1:'구인구직 - 채용공고 등록/수정',
                     path:'./portal/html/USR-1241-F-FORM.html',
-                    date:'',
+                    date:'2022-09-13',
                     mdate:'2022-10-24',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
