--- a/portal/html/USR-1242-F-DTL.html
+++ b/portal/html/USR-1242-F-DTL.html
@@ -329,309 +329,84 @@
                     <span>메뉴에 대한 설명을 상세하게 작성합니다. 메뉴에 대한 설명을 상세하게 작성합니다.</span>
                 </div>
 
-                <!-- 분야 -->
-                <div class="search_item">
-
-                    <div class="tit_box">
-                        <h4><span></span>분야</h4>
+                <!-- 정보 타이틀 -->
+                <div class="list_tit_box">
+                    <div class="img">
+                        <img src="../images/content/ico_community_main_img.png" alt="임시이미지">
                     </div>
-
-                    <ul class="chk_list type_02">
-                        <li>
-                            <div class="chk_box">
-                                <span>
-                                    <input type="checkbox" id="chk_39">
-                                    <label for="chk_39">전체</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_40">
-                                    <label for="chk_40">기술사</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_41">
-                                    <label for="chk_41">변호사</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_42">
-                                    <label for="chk_42">공인회계사</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_43">
-                                    <label for="chk_43">변리사</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_44">
-                                    <label for="chk_44">경영 - 기술지도사(3년이상경력)</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_45">
-                                    <label for="chk_45">전문인력</label>
-                                </span>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="chk_box">
-                                <span>
-                                    <input type="checkbox" id="chk_46">
-                                    <label for="chk_46">경영관리</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_47">
-                                    <label for="chk_47">투자심사</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_48">
-                                    <label for="chk_48">ICT제조</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_49">
-                                    <label for="chk_49">ICT서비스</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_50">
-                                    <label for="chk_50">전기/기계/장비</label>
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
-
-                </div>
-
-                <!-- 경력 -->
-                <div class="search_item">
-
-                    <div class="tit_box">
-                        <h4><span></span>경력</h4>
-                    </div>
-
-                    <ul class="chk_list type_03">
-                        <li>
-                            <div class="chk_box">
-                                <span>
-                                    <input type="checkbox" id="chk_57">
-                                    <label for="chk_57">전체</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_58">
-                                    <label for="chk_58">3년 이하</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_59">
-                                    <label for="chk_59">3 ~ 5년</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_60">
-                                    <label for="chk_60">5 ~ 10년</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_61">
-                                    <label for="chk_61">10 ~ 15년</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_62">
-                                    <label for="chk_62">15년 이상</label>
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
-
-                </div>
-
-                <div class="btn_box_group type_01 right">
-                    <div class="btn_box">
-                        <a href="" class="btn_blue">검색</a>
-                    </div>
-                </div>
-
-                <!-- 리스트 -->
-                <div class="tbl_card_list type_02">
-
-                    <!-- 테이블 상단정보 -->
-                    <div class="list_info">
-                        <ul>
-                            <li>
+                    <div class="list_group_info">
+                        <div class="top">
+                            <div class="administration_box">
+                                <div class="state_box type_02">
+                                    <span class="mauve">기업업종</span>
+                                    <span class="green">특이사항</span>
+                                </div>
                                 <div class="btn_box">
-                                    <button>경력 ▼</button>
+                                    <button class="btn_blue shadow dialog-link" data-target="#note_01">채용제안 쪽지 보내기</button>
+                                    <a href="" class="btn_setting">설정</a>
                                 </div>
-                            </li>
-                            <li>
-                                <div class="btn_box">
-                                    <button>최근업데이트 ▼</button>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="btn_box">
-                                    <a href="./USR-1242-F-FORM.html" class="comu_add">내 이력서 등록</a>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="total">전체<strong>150</strong>건</div>
-                    </div>
-                    <!-- //테이블 상단정보 -->
-
-                    <ul>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="state_box type_02">
-                                    <span class="mauve">분야</span>
-                                </div>
-                                <div class="tit">
-                                    비타민 같은 동료 ㅇㅇㅇ입니다!
-                                </div>
-                                <div class="subtit">경력 12년 12개월</div>
-                                <div class="info">
-                                    <span>회사와 함께 성장하고싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-                <!-- //리스트 -->
-
-                <!-- paging -->
-                <div class="board_btn">
-                    <div class="paging_box">
-                        <ul>
-                            <li class="prev_all"><a href="" title="최신페이지로 이동"></a></li>
-                            <li class="prev"><a href="" title="이전페이지로 이동"></a></li>
-                            <li class="on"><a href="">1</a></li>
-                            <li><a href="">2</a></li>
-                            <li><a href="">3</a></li>
-                            <li><a href="">4</a></li>
-                            <li><a href="">5</a></li>
-                            <li class="next"><a href="" title="다음페이지로 이동"></a></li>
-                            <li class="next_all"><a href="" title="마지막페이지로 이동"></a></li>
-                        </ul>
+                            </div>
+                            <div class="tit">
+                                <strong>비타민같은 동료 ㅇㅇㅇ입니다</strong>
+                                <ul class="details">
+                                    <li>
+                                        <span>경력 3년 이하</span>
+                                    </li>
+                                    <li>
+                                        <span>회사와 함께 성장하고 싶은, 주도적으로 스스로 일을 찾아 움직이는</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <!-- //paging -->
+
+                <!-- 이력 -->
+                <div class="resume_list">
+                    <dl>
+                        <dt>
+                            <strong>카카오페이</strong>
+                            <span>2022-04-23 ~ 재직중</span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>내/외부용 CMS 관련 프로젝트 참여</li>
+                                <li>React, NextJS, TypeScript, Styled-Component, React-Query, Zustand, Antd</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <strong>핵클</strong>
+                            <span>2021-01-01 ~ 2022-04-15</span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>AWS 인프라 구축 및 Java & Spring 서버 개발</li>
+                                <li>사내 프로젝트 개발, SI 프로젝트 참여</li>
+                                <li>
+                                    메인 개발자로 개발/운영<br/>
+                                    프로젝트 : 산림공간정보서비스 개발 및 데이터 융합 가공, cofact, 산림공간정보서비스 개발 및 데이터 융합 가공, 부건FNC 홈페이지 개발, 임산물 가격 예측 시스템 구축 및 데이터 관리
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <strong>회사명</strong>
+                            <span>기간</span>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>상세업무</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </div>
+
+                <div class="resume_etc_box">
+                    에디터로 작성된 이력서 기타사항
+                </div>
 
             </div>
 
@@ -679,5 +454,59 @@
     </footer>
 
 </div>
+
+<!-- 쪽지보내기 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>쪽지보내기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>쪽지보내기</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="radio_01">구분</label></th>
+                    <td colspan="3">투자제안</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr class="bg">
+                    <td colspan="4">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
+
 </body>
 </html>
