--- a/pub_list.html
+++ b/pub_list.html
@@ -556,27 +556,27 @@
                     division: '',
                     depth1:'구인구직 - 인력Pool',
                     path:'./portal/html/USR-1242-F-LIST.html',
-                    date:'',
+                    date:'2022-09-14',
                     mdate:'2022-11-01',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'구인구직 - 인력Pool 상세',
                     path:'./portal/html/USR-1242-F-DTL.html',
-                    date:'',
+                    date:'2022-09-14',
                     mdate:'2022-11-01',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
                     division: '',
                     depth1:'구인구직 - 인력Pool 등록/수정',
                     path:'./portal/html/USR-1242-F-FORM.html',
-                    date:'',
+                    date:'2022-09-14',
                     mdate:'2022-11-01',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
